# src/adapters/api/routes/__init__.py
@@ -1,3 +1,3 @@
-from . import health, herramientas
+from . import health, tools
 
-__all__ = ["health", "herramientas"]
+__all__ = ["health", "tools"]
